--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My Projects
-subtitle: projects and other information
+title: Timothy Carroll
+subtitle: Data Scientist and Information Lover
 ---
 
